Fix. Nav button alignment when selected.

--- a/plugins/market/resources/market-nav.css
+++ b/plugins/market/resources/market-nav.css
@@ -45,3 +45,7 @@
     line-height: 24px;
 }
 
+
+#nav-market .menubtn.sel {
+    bottom: -2px;
+}
